Add a UIGLPointCloud which uses shaders to render GL points faster

--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="lib" path="classpath/core.jar"/>
 	<classpathentry kind="lib" path="classpath/video.jar"/>
 	<classpathentry kind="lib" path="classpath/minim.jar"/>
+	<classpathentry kind="lib" path="classpath/jogl-all.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/LX"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
