--- a/resources/build.xml
+++ b/resources/build.xml
@@ -211,7 +211,7 @@ ${line}
 	<target name="generate.javadoc" if="is.normal">
 	  	<!-- create the java reference of the library -->
 		<javadoc bottom="Processing library ${project.name} by ${author.name}. ${library.copyright}" 
-				classpath="${classpath.local.location}/minim.jar;${classpath.local.location}/video.jar;${classpath.local.location}/core.jar;${project.lib}/gson-2.2.4.jar;{project.bin}" 
+				classpath="${classpath.local.location}/minim.jar;${classpath.local.location}/video.jar;${classpath.local.location}/core.jar;${classpath.local.location}/jogl-all.jar;${project.lib}/gson-2.2.4.jar;{project.bin}" 
 				destdir="${project.tmp}/${project.name}/reference" 
 				verbose="false" 
 				stylesheetfile="resources/stylesheet.css" 
