--- a/resources/build.properties
+++ b/resources/build.properties
@@ -45,7 +45,7 @@ classpath.local.location=classpath
 # and project classpath, use a comma as delimiter. These jar files must be 
 # inside your classpath.local.location folder.
 
-classpath.local.include=core.jar,video.jar,minim.jar
+classpath.local.include=core.jar,video.jar,minim.jar,jogl-all.jar
 
 
 # Add processing's libraries folder to the classpath.
