--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,20 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.processing/core
 	compile group: 'org.processing', name: 'core', version: '3.3.6'
 
+	// https://mvnrepository.com/artifact/org.reflections/reflections
+	compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
+
+	// https://mvnrepository.com/artifact/org.javassist/javassist
+	compile group: 'org.javassist', name: 'javassist', version: '3.22.0-GA'
+
+	// https://mvnrepository.com/artifact/com.google.guava/guava
+	compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
+
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-math3
 	compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+
+	// https://mvnrepository.com/artifact/uk.co.xfactory-librarians/coremidi4j
+	compile group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
 
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
